# fabio

./: .gitattributes  .gitignore  .mesonpy-native-file.ini  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.TXT  README.md  README.rst  README.txt  appveyor.yml  bootstrap.py  build-deb-python3.sh  build-deb.sh  build-deb7.sh  build-deb8.sh  build-debian-full.sh  build-doc.py  copyright  info_platform.py  make_man  meson.build  pyproject.toml  requirements.txt  requirements_appveyor.txt  requirements_travis.txt  run_tests.py  setup.py  stdeb.cfg  version.py
ci/: appveyor.yml  info_platform.py  ppc64le_installer  requirements_appveyor.txt  requirements_gh.txt  requirements_rtd.txt  requirements_travis.txt
conda.recipe/: build.bat  meta.yaml  meta.yml  meta.yml~
debian/: changelog  control  copyright  rules  watch
debian-orig/: copyright
doc/: Makefile  make.bat
epydoc/: api-objects.txt  class-tree.html  fabio-module.html  fabio-pysrc.html  fabio.GEimage-module.html  fabio.GEimage-pysrc.html  fabio.GEimage.GEimage-class.html  fabio.GEimage_old-module.html  fabio.GEimage_old-pysrc.html  fabio.GEimage_old.GEimage-class.html  fabio.HiPiCimage-module.html  fabio.HiPiCimage-pysrc.html  fabio.HiPiCimage.HiPiCimage-class.html  fabio.OXDimage-module.html  fabio.OXDimage-pysrc.html  fabio.OXDimage.OXDimage-class.html  fabio.OXDimage.Section-class.html  fabio.TiffIO-module.html  fabio.TiffIO-pysrc.html  fabio.TiffIO.TiffIO-class.html  fabio.adscimage-module.html  fabio.adscimage-pysrc.html  fabio.adscimage.adscimage-class.html  fabio.binaryimage-module.html  fabio.binaryimage-pysrc.html  fabio.binaryimage.binaryimage-class.html  fabio.bruker100image-module.html  fabio.bruker100image-pysrc.html  fabio.bruker100image.bruker100image-class.html  fabio.brukerimage-module.html  fabio.brukerimage-pysrc.html  fabio.brukerimage.brukerimage-class.html  fabio.byte_offset-module.html  fabio.cbfimage-module.html  fabio.cbfimage-pysrc.html  fabio.cbfimage.CIF-class.html  fabio.cbfimage.cbfimage-class.html  fabio.cf_io-module.html  fabio.compression-module.html  fabio.compression-pysrc.html  (+117 more)
fabio-src/: GEimage.py  GEimage_old.py  HiPiCimage.py  OXDimage.py  TiffIO.py  __init__.py  _version.py  adscimage.py  binaryimage.py  bruker100image.py  brukerimage.py  cbfimage.py  compression.py  converters.py  (+25 more)
fabio/ext/: _agi_bitfield.pyx  _cif.c  _cif.pyx  byte_offset.c  byte_offset.pyx  cf_io.c  cf_io.pyx  dense.pyx  mar345_IO.c  mar345_IO.pyx  meson.build  setup.py
fabio/ext/include/: ccp4_pack.h  columnfile.h
fabio/ext/include/msvc/: stdint.h
fabio/ext/src/: _cif.c  _cif.html  byte_offset.c  ccp4_pack.c  columnfile.c
fabio/test/codecs/: __init__.py  meson.build  test_adscimage.py  test_bruker100image.py  test_brukerimage.py  test_cbfimage.py  test_ccdimage.py  test_dm3image.py  test_dtrekimage.py  test_edfimage.py  test_edfimage1.py  test_edfimage_expg.py  test_ehfimage.py  test_eigerimage.py  test_esperantoimage.py  test_fit2dimage.py  test_fit2dmaskimage.py  test_fit2dspreadsheetimage.py  test_geimage.py  test_hdf5image.py  test_jpeg2kimage.py  test_jpegimage.py  test_kcdimage.py  test_limaimage.py  test_mar345image.py  test_mccdimage.py  test_mpaimage.py  test_mrcimage.py  test_numpyimage.py  test_oxdimage.py  test_pilatusimage.py  test_pixiimage.py  test_pnmimage.py  test_raxisimage.py  test_speimage.py  test_tifimage.py  test_xcaliburimage.py  test_xsdimage.py
fabio/utils/: ExternalResources.py  deprecation.py  mathutils.py  meson.build  pilutils.py  setup.py
src/fabio/: GEimage.py  HiPiCimage.py  OXDimage.py  TiffIO.py  __init__.py  _version.py  adscimage.py  binaryimage.py  bruker100image.py  brukerimage.py  cbfimage.py  converters.py  datIO.py  directories.py  dm3image.py  dtrekimage.py  edfimage.py  eigerimage.py  esperantoimage.py  fabioformats.py  fabioimage.py  fabioutils.py  file_series.py  fit2dimage.py  fit2dmaskimage.py  fit2dspreadsheetimage.py  hdf5image.py  jpeg2kimage.py  jpegimage.py  kcdimage.py  lambdaimage.py  limaimage.py  mar345image.py  marccdimage.py  meson.build  mpaimage.py  mrcimage.py  nexus.py  numpyimage.py  openimage.py  (+12 more)
src/fabio/app/: _matplotlib.py  convert.py  densify.py  eiger2cbf.py  eiger2crysalis.py  hdf2neggia.py  meson.build  viewer.py  viewer_qtpy.py
src/fabio/benchmark/: __init__.py
src/fabio/compression/: __init__.py  agi_bitfield.py  compression.py
src/fabio/ext/: _agi_bitfield.pyx  _cif.pyx  byte_offset.pyx  cf_io.pyx  dense.pyx  mar345_IO.pyx  meson.build
src/fabio/ext/src/: ccp4_pack.c  cf_iomodule.c  columnfile.c
src/fabio/qt/: __init__.py  _pyqt6.py  _pyside_dynamic.py  _qt.py  dialogs.py  matplotlib.py  meson.build  viewer.py
src/fabio/test/: __init__.py  meson.build  profile_all.py  test_agi_bitfield.py  test_all.py  test_compression.py  test_densification.py  test_fabio.py  test_fabio_convert.py  test_fabio_image.py  test_failing_files.py  test_file_series.py  test_filename_steps.py  test_filenames.py  test_flat_binary.py  test_formats.py  test_frames.py  test_header_not_singleton.py  test_image_convert.py  test_import.py  test_io_limits.py  test_nexus.py  test_open_header.py  test_open_image.py  test_tiffio.py  test_utils_cli.py  testutils.py  utilstest.py
src/fabio/test/codecs/: __init__.py  meson.build  setup.py  test_binaryimage.py  test_bruker100image.py  test_brukerimage.py  test_cbfimage.py  test_dm3image.py  test_dtrekimage.py  test_edfimage.py  test_edfimage_expg.py  test_eigerimage.py  test_esperantoimage.py  test_fit2dimage.py  test_fit2dmaskimage.py  test_fit2dspreadsheetimage.py  test_geimage.py  test_hdf5image.py  test_hipicimage.py  test_jpeg2kimage.py  test_jpegimage.py  test_kcdimage.py  test_lambdaimage.py  test_limaimage.py  test_mar345image.py  test_mccdimage.py  test_mpaimage.py  test_mrcimage.py  test_numpyimage.py  test_oxdimage.py  test_pilatusimage.py  test_pixiimage.py  test_pnmimage.py  test_raxisimage.py  test_speimage.py  test_tifimage.py  test_xcaliburimage.py  test_xsdimage.py
src/fabio/utils/: ExternalResources.py  cli.py  deprecation.py  pilutils.py  testutils.py
(+503 files in other folders)
