python_sources = [
	'__init__.py',
	'cli.py',
	'deprecation.py',
	'ExternalResources.py',
	'mathutils.py',
	'pilutils.py',
	'testutils.py'
]

py.install_sources(
  python_sources,
  pure: true,    # Will be installed next to binaries
  subdir: 'fabio/utils'  # Folder relative to site-packages to install to
)