subdir('app')
subdir('benchmark')
subdir('compression')
subdir('ext')
subdir('test')
subdir('utils')

version_py = configure_file(input: '../version.py', output: '_version.py', copy: true)

py.install_sources([
	version_py,
	'adscimage.py',
	'binaryimage.py',
	'bruker100image.py',
	'brukerimage.py',
	'cbfimage.py',
	'xcaliburimage.py',
	'converters.py',
	'datIO.py',
	'directories.py',
	'dm3image.py',
	'dtrekimage.py',
	'edfimage.py',
	'eigerimage.py',
	'esperantoimage.py',
	'fabioformats.py',
	'fabioimage.py',
	'fabioutils.py',
	'file_series.py',
	'fit2dimage.py',
	'fit2dmaskimage.py',
	'fit2dspreadsheetimage.py',
	'GEimage.py',
	'hdf5image.py',
	'HiPiCimage.py',
	'__init__.py',
	'jpeg2kimage.py',
	'jpegimage.py',
	'kcdimage.py',
	'limaimage.py',
	'mar345image.py',
	'marccdimage.py',
	'mpaimage.py',
	'mrcimage.py',
	'nexus.py',
	'numpyimage.py',
	'openimage.py',
	'OXDimage.py',
	'pilatusimage.py',
	'pixiimage.py',
	'pnmimage.py',
	'raxisimage.py',
	'readbytestream.py',
	'sparseimage.py',
	'speimage.py',
	'templateimage.py',
	'TiffIO.py',
	'tifimage.py',
	'xsdimage.py',
],
  pure: false,    # Will be installed next to binaries
  subdir: 'fabio'  # Folder relative to site-packages to install to
)
