py.install_sources(
['__init__.py',
 'test_bruker100image.py',
 'test_brukerimage.py',
 'test_cbfimage.py',
 'test_dm3image.py',
 'test_dtrekimage.py',
 'test_edfimage.py',
 'test_edfimage_expg.py',
 'test_eigerimage.py',
 'test_esperantoimage.py',
 'test_fit2dimage.py',
 'test_fit2dmaskimage.py',
 'test_fit2dspreadsheetimage.py',
 'test_geimage.py',
 'test_hdf5image.py',
 'test_hipicimage.py',
 'test_jpeg2kimage.py',
 'test_jpegimage.py',
 'test_kcdimage.py',
 'test_limaimage.py',
 'test_mar345image.py',
 'test_mccdimage.py',
 'test_mpaimage.py',
 'test_mrcimage.py',
 'test_numpyimage.py',
 'test_oxdimage.py',
 'test_pilatusimage.py',
 'test_pixiimage.py',
 'test_pnmimage.py',
 'test_raxisimage.py',
 'test_speimage.py',
 'test_tifimage.py',
 'test_xsdimage.py',
 'test_binaryimage.py',
 'test_xcaliburimage.py'],
  pure: false,   # Will be installed next to binaries
  subdir: 'fabio/test/codecs'  # Folder relative to site-packages to install to
)
