py.install_sources([
        '__init__.py',
        'inspect.py',
        'matplotlib.py',
        '_pyqt6.py',
        '_pyside_dynamic.py',
        '_qt.py',
        '_utils.py',
],
  pure: false,    # Will be installed next to binaries
  subdir: 'fabio/qt'  # Folder relative to site-packages to install to
)
