subdir('codecs')

py.install_sources(
['__init__.py',
 'profile_all.py',
 'test_agi_bitfield.py',
 'test_all.py',
 'test_all_images.py',
 'test_compression.py',
 'test_densification.py',
 'test_fabio.py',
 'test_fabio_convert.py',
 'test_fabio_image.py',
 'test_failing_files.py',
 'test_file_series.py',
 'test_filename_steps.py',
 'test_filenames.py',
 'test_flat_binary.py',
 'test_formats.py',
 'test_frames.py',
 'test_header_not_singleton.py',
 'test_image_convert.py',
 'test_io_limits.py',
 'test_nexus.py',
 'test_open_header.py',
 'test_open_image.py',
 'test_tiffio.py',
 'test_utils_cli.py',
 'testutils.py',
 'utilstest.py'],
  pure: false,   # Will be installed next to binaries
  subdir: 'fabio/test/'  # Folder relative to site-packages to install to
)

